day108天使用分页助手和通用mapper插件搭建Item 经过测试,成功运行!

--- a/taotao_manage/taotao_manage_pojo/pom.xml
+++ b/taotao_manage/taotao_manage_pojo/pom.xml
@@ -24,5 +24,10 @@
             <version>3.8.1</version>
             <scope>test</scope>
         </dependency>
+            <!-- 通用mapper -->
+            <dependency>
+                <groupId>tk.mybatis</groupId>
+                <artifactId>mapper</artifactId>
+            </dependency>
     </dependencies>
 </project>
