--- a/taotao_manage/taotao_manage_interface/pom.xml
+++ b/taotao_manage/taotao_manage_interface/pom.xml
@@ -30,5 +30,15 @@
             <version>3.8.1</version>
             <scope>test</scope>
         </dependency>
+        <!-- 分页助手 -->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.github.jsqlparser</groupId>
+            <artifactId>jsqlparser</artifactId>
+        </dependency>
+
     </dependencies>
 </project>
