--- a/taotao_manage/taotao_manage_interface/pom.xml
+++ b/taotao_manage/taotao_manage_interface/pom.xml
@@ -39,6 +39,11 @@
             <groupId>com.github.jsqlparser</groupId>
             <artifactId>jsqlparser</artifactId>
         </dependency>
-
+        <!-- taotao-common依赖 -->
+        <dependency>
+            <groupId>com.taotao</groupId>
+            <artifactId>taotao_common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
