--- a/taotao_manage/taotao_manage_service/pom.xml
+++ b/taotao_manage/taotao_manage_service/pom.xml
@@ -86,6 +86,11 @@
             <version>3.8.1</version>
             <scope>test</scope>
         </dependency>
+        <!-- Redis客户端 -->
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+        </dependency>
 
     </dependencies>
     <build>
