--- a/taotao_portal/pom.xml
+++ b/taotao_portal/pom.xml
@@ -54,6 +54,11 @@
             <groupId>joda-time</groupId>
             <artifactId>joda-time</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.taotao</groupId>
+            <artifactId>taotao_manager_interface</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
         <!-- Apache工具组件 -->
         <dependency>
