--- a/taotao_parent/pom.xml
+++ b/taotao_parent/pom.xml
@@ -5,6 +5,9 @@
     <groupId>com.taotao</groupId>
     <artifactId>taotao_parent</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>../taotao_sso_web</module>
+    </modules>
     <packaging>pom</packaging>
 
     <name>taotao_parent</name>
