--- a/taotao_sso/taotao_sso_pojo/pom.xml
+++ b/taotao_sso/taotao_sso_pojo/pom.xml
@@ -1,16 +1,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>taotao_parent</artifactId>
+        <artifactId>taotao_sso</artifactId>
         <groupId>com.taotao</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>taotao_common</artifactId>
+    <artifactId>taotao_sso_pojo</artifactId>
     <packaging>jar</packaging>
 
-    <name>taotao_common</name>
+    <name>taotao_sso_pojo</name>
     <url>http://maven.apache.org</url>
 
     <properties>
@@ -24,14 +24,10 @@
             <version>3.8.1</version>
             <scope>test</scope>
         </dependency>
-        <!-- Redis客户端 -->
+        <!-- 通用mapper -->
         <dependency>
-            <groupId>redis.clients</groupId>
-            <artifactId>jedis</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-web</artifactId>
+            <groupId>tk.mybatis</groupId>
+            <artifactId>mapper</artifactId>
         </dependency>
     </dependencies>
 </project>
