--- a/taotao_sso_web/pom.xml
+++ b/taotao_sso_web/pom.xml
@@ -1,62 +1,58 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <parent>
-        <artifactId>taotao_manage</artifactId>
+        <artifactId>taotao_parent</artifactId>
         <groupId>com.taotao</groupId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>../taotao_parent/pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>taotao_manager_service</artifactId>
+    <artifactId>taotao_sso_web</artifactId>
     <packaging>war</packaging>
-    <name>taotao_manager_service Maven Webapp</name>
+    <name>taotao_sso_web Maven Webapp</name>
     <url>http://maven.apache.org</url>
     <dependencies>
-        <!-- taotao-manage-interface依赖 -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>3.8.1</version>
+            <scope>test</scope>
+        </dependency>
+        <!-- taotao-sso-interface依赖 -->
         <dependency>
             <groupId>com.taotao</groupId>
-            <artifactId>taotao_manager_interface</artifactId>
+            <artifactId>taotao_sso_interface</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-        <!-- taotao-manage-mapper依赖 -->
-        <dependency>
-            <groupId>com.taotao</groupId>
-            <artifactId>taotao_manager_mapper</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <!-- taotao-common依赖 -->
-        <dependency>
-            <groupId>com.taotao</groupId>
-            <artifactId>taotao_common</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
+
         <!-- Spring -->
         <dependency>
             <groupId>org.springframework</groupId>
-            <artifactId>spring-jdbc</artifactId>
+            <artifactId>spring-webmvc</artifactId>
         </dependency>
+
+        <!-- 日志 -->
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-aspects</artifactId>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-web</artifactId>
-        </dependency>
-        <!-- MySql -->
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-        </dependency>
-        <!-- 连接池 -->
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>druid</artifactId>
-        </dependency>
+
         <!-- Jackson Json处理工具包 -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
         </dependency>
+
+        <!-- Apache工具组件 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-io</artifactId>
+        </dependency>
+
         <!-- dubbo相关 -->
         <dependency>
             <groupId>com.alibaba</groupId>
@@ -80,16 +76,20 @@
             <groupId>com.github.sgroschupf</groupId>
             <artifactId>zkclient</artifactId>
         </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>3.8.1</version>
-            <scope>test</scope>
-        </dependency>
-
-
     </dependencies>
     <build>
-        <finalName>taotao_manager_service</finalName>
+        <finalName>taotao_sso_web</finalName>
+        <plugins>
+            <!-- 配置Tomcat插件 -->
+            <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <configuration>
+                    <path>/</path>
+                    <port>9094</port>
+                </configuration>
+            </plugin>
+        </plugins>
+
     </build>
 </project>
