day114天 测试完成 单点登陆,jsonp和跨域问题

--- a/taotao_sso/pom.xml
+++ b/taotao_sso/pom.xml
@@ -11,7 +11,7 @@
     <artifactId>taotao_sso</artifactId>
     <packaging>pom</packaging>
 
-    <name>Maven</name>
+    <name>taotao_sso</name>
     <url>http://maven.apache.org/</url>
     <inceptionYear>2001</inceptionYear>
     <modules>
