--- a/taotao_portal/pom.xml
+++ b/taotao_portal/pom.xml
@@ -88,9 +88,16 @@
             <groupId>org.apache.zookeeper</groupId>
             <artifactId>zookeeper</artifactId>
         </dependency>
+
         <dependency>
             <groupId>com.github.sgroschupf</groupId>
             <artifactId>zkclient</artifactId>
+        </dependency>
+        <!--taotao_sso_interface依赖-->
+        <dependency>
+            <groupId>com.taotao</groupId>
+            <artifactId>taotao_sso_interface</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
