--- a/taotao_portal/src/main/webapp/WEB-INF/web.xml
+++ b/taotao_portal/src/main/webapp/WEB-INF/web.xml
@@ -2,7 +2,7 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
     <display-name>taotao-portal</display-name>
     <welcome-file-list>
-        <welcome-file>index.jsp</welcome-file>
+        <welcome-file>index.html</welcome-file>
     </welcome-file-list>
 
     <!-- 解决POST乱码问题 -->
@@ -33,10 +33,10 @@
     <servlet-mapping>
         <servlet-name>taotao-portal</servlet-name>
         <url-pattern>*.html</url-pattern>
-    </servlet-mapping>
 
-    <!-- <servlet-mapping>
-            <servlet-name>taotao-portal</servlet-name>
-            <url-pattern>/service/*</url-pattern>
-    </servlet-mapping> -->
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>taotao-portal</servlet-name>
+        <url-pattern>/service/*</url-pattern>
+    </servlet-mapping>
 </web-app>
