--- a/taotao_sso/taotao_sso_pojo/pom.xml
+++ b/taotao_sso/taotao_sso_pojo/pom.xml
@@ -29,5 +29,10 @@
             <groupId>tk.mybatis</groupId>
             <artifactId>mapper</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.8.0</version>
+        </dependency>
     </dependencies>
 </project>
