--- a/taotao_sso/taotao_sso_service/pom.xml
+++ b/taotao_sso/taotao_sso_service/pom.xml
@@ -83,6 +83,11 @@
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-mapper-asl</artifactId>
+            <version>1.9.12</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>taotao_sso_service</finalName>
